// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button create expanded section content correctly 1`] = `
<List
  className="myClass"
  id="button1"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className="list-component list myClass"
    id="button1"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <div
      key="0"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <ListItem
        active={false}
        className="myClass"
        hovered={false}
        image="imageURL"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "blue",
            "cursor": "pointer",
          }
        }
      >
        <div
          className="listitem-component listItem myClass"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "blue",
              "cursor": "pointer",
            }
          }
        >
          <div
            className="detailsContainer loneImage"
          >
            <div
              className="image"
            >
              <img
                src="imageURL"
              />
            </div>
          </div>
          <div
            className="content lone"
          >
            <ItemContent>
              <div
                className="item-content-component undefined"
              >
                Some Content
              </div>
            </ItemContent>
          </div>
        </div>
      </ListItem>
      <ExpandedSection
        active={false}
      >
        <div
          className="expanded-section-component expandedSection undefined"
          style={
            Object {
              "display": "none",
            }
          }
        >
          Some ExpandedSection Content
        </div>
      </ExpandedSection>
    </div>
  </div>
</List>
`;

exports[`Button renders List correctly 1`] = `
<div
  className="list-component list myClass"
  id="button1"
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`Button renders ListItem correctly 1`] = `
<div
  className="listitem-component listItem myClass"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className="detailsContainer "
  >
    <div
      className="image"
    >
      <img
        src="imageUrl"
      />
    </div>
    <div
      className="titleContainer"
    >
      <span
        className="title"
      >
        title
      </span>
      <span
        className="description"
      >
        desc
      </span>
    </div>
  </div>
  <div
    className="content "
  >
    <ItemContent>
      test
    </ItemContent>
  </div>
</div>
`;

exports[`Button renders with multiple children 1`] = `
<List
  className="myClass"
  id="button1"
  style={
    Object {
      "color": "blue",
    }
  }
>
  <div
    className="list-component list myClass"
    id="button1"
    style={
      Object {
        "color": "blue",
      }
    }
  >
    <div
      key="0"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <ListItem
        active={false}
        className="myClass"
        description="desc"
        hovered={false}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "blue",
          }
        }
        title="title"
      >
        <div
          className="listitem-component listItem myClass"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <div
            className="detailsContainer "
          >
            <div
              className="titleContainer"
            >
              <span
                className="title"
              >
                title
              </span>
              <span
                className="description"
              >
                desc
              </span>
            </div>
          </div>
          <div
            className="content "
          >
            <ItemContent>
              <div
                className="item-content-component undefined"
              >
                test
              </div>
            </ItemContent>
          </div>
        </div>
      </ListItem>
    </div>
    <div
      key="1"
      style={
        Object {
          "display": "flex",
          "flexDirection": "column",
        }
      }
    >
      <ListItem
        active={false}
        className="myClass"
        hovered={false}
        image="imageUrl"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "blue",
          }
        }
      >
        <div
          className="listitem-component listItem myClass"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          style={
            Object {
              "color": "blue",
            }
          }
        >
          <div
            className="detailsContainer loneImage"
          >
            <div
              className="image"
            >
              <img
                src="imageUrl"
              />
            </div>
          </div>
          <div
            className="content lone"
          >
            <ItemContent>
              <div
                className="item-content-component undefined"
              >
                test
              </div>
            </ItemContent>
          </div>
        </div>
      </ListItem>
    </div>
  </div>
</List>
`;
